# verita

./: Cargo.toml  LICENSE  README.md  run_configuration_all.toml
scripts/: analyze.py  get-stderr.py  summarize.py  summary.py
src/: config.rs  dependencies.rs  main.rs  output.rs
